components/petclinic/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: petclinic
    app.kubernetes.io/component: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/part-of: petclinic
    app.openshift.io/runtime-version: latest
  name: petclinic
spec:
  clusterIP: 172.30.80.95
  clusterIPs:
  - 172.30.80.95
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: petclinic
    deploymentconfig: petclinic
