components/petclinic/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: petclinic
    app.kubernetes.io/component: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/part-of: petclinic
    app.openshift.io/runtime-version: latest
  name: petclinic
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: petclinic
    weight: 100
  wildcardPolicy: None
